<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".ItemEditActivity">

    <TextView
        android:id="@+id/itemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_label"
        android:labelFor="@+id/itemText"
        style="@style/ItemLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/itemText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/item_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        style="@style/ItemEditText"
        app:layout_constraintTop_toTopOf="@id/itemLabel"
        app:layout_constraintBottom_toTopOf="@+id/quantityText"
        app:layout_constraintLeft_toRightOf="@id/itemLabel"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/quantityLabel"
        style="@style/ItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="40dp"
        android:labelFor="@+id/quantityText"
        android:text="@string/quantity_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemLabel" />

    <EditText
        android:id="@+id/quantityText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/quantity_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        style="@style/ItemEditText"
        app:layout_constraintBottom_toTopOf="@id/descriptionText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/quantityLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/quantityLabel"
        app:layout_constraintVertical_bias="0.0"
        tools:text="quantity"
        app:layout_constraintBaseline_toBaselineOf="@id/quantityLabel" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/description_label"
        android:labelFor="@+id/descriptionText"
        style="@style/ItemLabel"
        app:layout_constraintTop_toBottomOf="@+id/quantityLabel"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/description_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        style="@style/ItemEditText"
        app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveButtonClick"
        app:srcCompat="@drawable/check"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>