<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noItemsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:context="com.zybooks.johnaustininventoryapp.ItemActivity">

            <TextView
                android:id="@+id/noItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_items"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/addItemButton" />

            <Button
                android:id="@+id/addItemButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_item"
                android:onClick="addItemButtonClick"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/showItemsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            tools:context="com.zybooks.johnaustininventoryapp.ItemActivity">

            <TextView
                android:id="@+id/itemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_label"
                style="@style/ItemLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/itemText"/>

            <TextView
                android:id="@+id/itemText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="30sp"
                tools:text="item"
                app:layout_constraintTop_toTopOf="@id/itemLabel"
                app:layout_constraintBottom_toTopOf="@+id/quantityText"
                app:layout_constraintLeft_toRightOf="@id/itemLabel"
                app:layout_constraintRight_toRightOf="parent"/>


            <TextView
                android:id="@+id/quantityLabel"
                style="@style/ItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="40dp"
                android:text="@string/quantity_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemLabel" />

            <TextView
                android:id="@+id/quantityText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/descriptionText"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toRightOf="@id/quantityLabel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/quantityLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="quantity"
                app:layout_constraintBaseline_toBaselineOf="@id/quantityLabel"/>

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/description_label"
                style="@style/ItemLabel"
                app:layout_constraintTop_toBottomOf="@+id/quantityLabel"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                tools:text="description"
                app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>